--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,10 +1,4 @@
-<!--
 
-    TODO :: PUT CHART
-
-    TODO :: SHOW THE NUMBER OF DEPARTMENT, EMPLOYEE, CLIENT, PROJECT
-
- -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.w3.org/1999/xhtml" layout:decorate="layout/layout"
       lang="en">
@@ -44,7 +38,6 @@
                         <i class="bi bi-collection-fill fa-2x text-primary"></i>
                         <div class="ms-3">
                             <p class="mb-2">Today Project</p>
-                            <!-- TODO :: SHOW THE NUMBER OF PROJECTS -->
                             <h6 class="mb-0" id="projectCount"></h6>
                         </div>
                     </div>
@@ -54,17 +47,15 @@
                         <i class="fa-solid fa-people-group fa-3x text-primary"></i>
                         <div class="ms-3">
                             <p class="mb-2">Total Employee</p>
-                            <!-- TODO :: SHOW THE NUMBER OF EMPLOYEE -->
                             <h6 class="mb-0" id="employeeCount"></h6>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-xl-3">
                     <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
-                        <i class="fa-solid fa-dog fa-3x text-primary"></i>
+                        <i class="fa-solid fa-user-tie fa-3x text-primary"></i>
                         <div class="ms-3">
                             <p class="mb-2">Today Client</p>
-                            <!-- TODO :: SHOW THE NUMBER OF CLIENT -->
                             <h6 class="mb-0" id="clientCount"></h6>
                         </div>
                     </div>
@@ -74,7 +65,6 @@
                         <i class="bi bi-buildings-fill fa-2x text-primary"></i>
                         <div class="ms-3">
                             <p class="mb-2">Total Department</p>
-                            <!-- TODO :: SHOW THE NUMBER OF DEPARTMENT -->
                             <h6 class="mb-0" id="departmentCount"></h6>
                         </div>
                     </div>
@@ -138,27 +128,6 @@
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <p class="lead">KPI</p>
-
-                                <div class="dropdown">
-                                    <a class="dropdown-toggle text-decoration-none" type="button"
-                                       id="dropdownMenuButton3" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Month
-                                    </a>
-                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
-                                        <li><a class="dropdown-item" href="#">January</a></li>
-                                        <li><a class="dropdown-item" href="#">February</a></li>
-                                        <li><a class="dropdown-item" href="#">March</a></li>
-                                        <li><a class="dropdown-item" href="#">April</a></li>
-                                        <li><a class="dropdown-item" href="#">May</a></li>
-                                        <li><a class="dropdown-item" href="#">June</a></li>
-                                        <li><a class="dropdown-item" href="#">July</a></li>
-                                        <li><a class="dropdown-item" href="#">August</a></li>
-                                        <li><a class="dropdown-item" href="#">September</a></li>
-                                        <li><a class="dropdown-item" href="#">October</a></li>
-                                        <li><a class="dropdown-item" href="#">November</a></li>
-                                        <li><a class="dropdown-item" href="#">December</a></li>
-                                    </ul>
-                                </div>
                             </div>
 
                             <div class="bar-chart-con">
@@ -222,11 +191,8 @@
         // Get the mm chart canvas
         const mmctx = document.getElementById("man-month-chart").getContext('2d');
 
-        // Dummy data
-        const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
-
         const initialManMonthData = {
-            label: months,
+            labels: ['yyyy-mm'],
             datasets: [{
                 label: 'Actual',
                 data: [], // actual manhours from api
@@ -264,7 +230,6 @@
         const p1ctx = document.getElementById("productivity-1-chart").getContext('2d');
 
         const initialProductivityData = {
-            label: months,
             datasets: [{
                 label: 'Productivity Ratio',
                 data: [],
@@ -354,6 +319,10 @@
                     y: {
                         beginAtZero: true,
                         max: 250,
+                        ticks: {
+                            stepSize: 5
+
+                        }
                     }
                 }
             }
@@ -518,9 +487,22 @@
             lineChart.data.datasets[0].data = [];
             lineChart.data.datasets[1].data = [];
 
+            barChart.data.datasets[0].data = [];
+            barChart.data.labels = [];
+
+            barChart2.data.datasets.forEach((dataset, index) => {
+                dataset.data = [];
+            });
+
+
+
             //clear x axis labels
             lineChart.data.labels = [];
+            barChart.data.labels = [];
+            barChart2.data.labels = [];
             lineChart.update();
+            barChart.update();
+            barChart2.update();
         });
 
 
