Fixed Forget Password Function

--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -69,7 +69,7 @@
 
 
             <!-- New Password Field -->
-            <div id="new-password-container d-none">
+            <div id="new-password-container" class="d-none">
               <div class="form-floating mb-3">
                 <input type="password" class="form-control" id="new-password" placeholder="New Password" name="newPassword" />
                 <label for="new-password">New Password</label>
