no error perfect code 2

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -92,12 +92,14 @@
                 border: 1px solid #369; /* Add border to the table */
                 border-collapse: collapse;
                 margin-bottom: 20px;
+                text-align: center;
             }
 
             #deliverable-list th, #deliverable-list td {
                 border: 1px solid #369;
                 padding: 8px;
-                text-align: left;
+                text-align: center;
+
             }
 
             #deliverable-list th {
