Fixed Register Employee Function

--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -84,6 +84,7 @@
                                                 class="bi bi-plus-circle"
                                         ></i>
                                     </button>
+                                    </button>
                                 </h3>
                                 <div class="swim-lane p-3" id="TODO">
                                 </div>
