--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -644,8 +644,10 @@
                         id: employeeId,
                         name: username,
                         email: email,
-                        departmentId: departmentId
+                        departmentId: departmentId,
                     };
+
+                     console.log("payload", payload);
 
 
                     $.ajax({
