Fixed Forget Password Function

--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -60,7 +60,7 @@
             </div>
 
             <!-- OTP Field -->
-            <div id="otp-container" class="d-none">
+            <div id="otp-container" style="display: none">
               <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="otp" placeholder="OTP" name="otp" />
                 <label for="otp">OTP</label>
@@ -69,7 +69,7 @@
 
 
             <!-- New Password Field -->
-            <div id="new-password-container" class="d-none">
+            <div id="new-password-container" style="display: none">
               <div class="form-floating mb-3">
                 <input type="password" class="form-control" id="new-password" placeholder="New Password" name="newPassword" />
                 <label for="new-password">New Password</label>
@@ -81,12 +81,12 @@
                     aria-hidden="true"></span>
               Request OTP
             </button>
-            <button type="button" class="btn btn-primary py-3 w-100 mb-4 d-none" id="confirm-otp">
+            <button type="button" class="btn btn-primary py-3 w-100 mb-4" style="display: none;" id="confirm-otp">
               <span class="spinner-border spinner-border-sm d-none" role="status"
                     aria-hidden="true"></span>
               Confirm OTP
             </button>
-            <button type="button" class="btn btn-primary py-3 w-100 mb-4 d-none" id="reset-password">
+            <button type="button" class="btn btn-primary py-3 w-100 mb-4" style="display: none;" id="reset-password">
               <span class="spinner-border spinner-border-sm d-none" role="status"
                     aria-hidden="true"></span>
               Reset Password
@@ -149,14 +149,15 @@
         url: '/api/user/send-otp/'+$("#emailInput").val(),
         type: 'GET',
         success: function(data) {
-          $("#password-reset").classList.add("d-none");
-            $("#confirm-otp").classList.remove("d-none");
+          console.log(data);
+          $("#password-reset").hide();
+            $("#confirm-otp").show();
 
-            $("#otp-container").classList.remove("d-none");
+            $("#otp-container").show();
           $("#emailInput").prop('disabled', true);
         },
-        error: function(error) {
-            showError(error.responseJSON.message);
+        error: function(xhr, textStatus, errorThrown) {
+            showError(xhr.responseText);
         },
         complete  : function(){
             $("#password-reset").html("Request OTP").prop('disabled', false);
@@ -171,17 +172,14 @@
       $.ajax({
         url: '/api/user/confirm-otp/'+$("#emailInput").val()+"/"+$("#otp").val(),
         type: 'POST',
-        data: {
-          otp: $("#otp").val()
-        },
         success: function(data) {
           $("#confirm-otp").hide();
             $("#reset-password").show();
             $("#new-password-container").show();
           $("#emailInput").prop('disabled', true);
         },
-        error: function(error) {
-            showError(error.responseJSON.message);
+        error: function(xhr, textStatus, errorThrown) {
+            showError(xhr.responseText);
         },
         complete  : function(){
             $("#confirm-otp").html("Confirm OTP").prop('disabled', false);
@@ -189,28 +187,21 @@
       });
     });
 
-    $("#confirm-password").click(function(){
+    $("#reset-password").click(function(){
       // Show the loading spinner on the button
       $(this).html('<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Sending...');
       $(this).prop('disabled', true);
-      console.log($("#emailInput").val());
       $.ajax({
         url: '/api/user/reset-password/'+$("#emailInput").val()+"/"+$("#new-password").val(),
         type: 'POST',
-        data: {
-          newPassword: $("#new-password").val()
-        },
         success: function(data) {
-            $("#confirm-password").hide();
-                $("#reset-password").show();
-                $("#new-password-container").show();
-            $("#emailInput").prop('disabled', true);
+            window.location.href = "/login";
         },
-        error: function(error) {
-            showError(error.responseJSON.message);
+        error: function(xhr, textStatus, errorThrown) {
+            showError(xhr.responseText);
         },
         complete  : function(){
-          window.location.href = "/login";
+            $("#reset-password").html("Reset Password").prop('disabled', false);
         }
       });
     });
