--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -1856,27 +1856,40 @@
                         membersUserDto: empList.map((str) => ({ id: parseInt(str) })),
                     };
                     console.log(project);
-                    //Perform the AJAX request
-                    $.ajax({
-                        url: "/api/project/save", // Replace with the actual URL for your project registration endpoint
-                        type: "POST",
-                        data: JSON.stringify(project),
-                        dataType: "json",
-                        contentType: "application/json; charset=utf-8",
-                        success: async function (data) {
-                            alert("Project registered successfully");
-                            // Reset the form if needed
-                            $("#validation-form")[0].reset();
-                            console.log("this projce has benn saved", data);
-                            // event.currentTarget.submit();
-                            window.top.location = window.top.location;
-                        },
-                        error: function (data) {
-                            alert("Error registering project");
-                            // event.currentTarget.submit();
-                            window.top.location = window.top.location;
-                        },
+                    Swal.fire({
+                        title: "Are you sure want to edit?",
+                        icon: "warning",
+                        showCancelButton: true,
+                        confirmButtonColor: "#3085d6",
+                        cancelButtonColor: "#d33",
+                        confirmButtonText: "Yes"
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+
+                            //Perform the AJAX request
+                            $.ajax({
+                                url: "/api/project/save", // Replace with the actual URL for your project registration endpoint
+                                type: "POST",
+                                data: JSON.stringify(project),
+                                dataType: "json",
+                                contentType: "application/json; charset=utf-8",
+                                success: async function (data) {
+                                    alert("Project registered successfully");
+                                    // Reset the form if needed
+                                    $("#validation-form")[0].reset();
+                                    console.log("this projce has benn saved", data);
+                                    // event.currentTarget.submit();
+                                    window.top.location = window.top.location;
+                                },
+                                error: function (data) {
+                                    alert("Error registering project");
+                                    // event.currentTarget.submit();
+                                    window.top.location = window.top.location;
+                                },
+                            });
+                        }
                     });
+
                 });
             });
 
